2001-05-31  Dave Peticolas  <dave@krondo.com>

	* src/test/test-dom-converters1.c (test_dom_tree_to_gnc_numeric):
	fix bug

	* src/engine/sixtp-utils.c (string_to_gint32): use intermediate
	variable in case int != gint32.

	* src/test/test-dom-converters1.c: fix spelling

	* src/engine/sixtp-dom-generators.c (int_to_dom_tree): cast
	gint64 to long long int for %lld.

2001-05-31  James LewisMoss  <jimdres@mindspring.com>

	* src/scm/tip-of-the-day.scm ((gnc:current-tip-number)): reset
	number if greater.  tips read before config file so this number
	gets reset by config file too high.

2001-05-31  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/gnucash-design.texinfo: update docs

	* src/doc/design/engine.texinfo: document commodites & their API

	* doc/sgml/C/xacc-price-editor.sgml: fix warnings

2001-05-31  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-ticker.sgml: renamed xacc-price-sources.sgml
	in preparation for rewriting - some material to be excised.

	* doc/sgml/C/xacc-price-editor.sgml: new file.

	* doc/sgml/C/gnucash.sgml: updated for new/changed file names.

	* doc/sgml/C/*.sgml: change xacc-ticker references to
	xacc-price-sources, or remove them entirely.

2001-05-30  Dave Peticolas  <dave@krondo.com>

	* src/test/Makefile.am: add missing link lib

	* src/engine/sixtp.c: include sys/types.h for ssize_t under
	freebsd

	* src/engine/sixtp-utils.c (timespec_secs_to_given_string): use
	gnc_timezone

	* src/engine/date.c (gnc_timezone): new func
	(gnc_iso8601_to_timespec): use gnc_timezone
	(gnc_timespec_to_iso8601_buff): use gnc_timezone

2001-05-29  Dave Peticolas  <dave@krondo.com>

	* configure.in: call new macro below

	* acinclude.m4: add macro to check for tm_gmtoff struct tm member

	* src/engine/date.c: handle all uses of nl_langinfo.

2001-05-30  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/date.c (printDate): Workaround for
	missing nl_langinfo.

	* src/engine/Query.c: moved sys/types.h before
	regex.h.
