@@ -1,5 +1,8 @@
 2001-05-31  Dave Peticolas  <dave@krondo.com>
 
+	* src/engine/sixtp-dom-parsers.c (string_to_binary): fix sanity
+	checks
+
 	* src/test/test-dom-converters1.c (test_dom_tree_to_gnc_numeric):
 	fix bug
 
